theProject/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project
  labels:
    name: project
    environment: production
    branch: main
