theProject/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-project
  namespace: project
  labels:
    app: the-project
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: the-project
  template:
    metadata:
      labels:
        app: the-project
    spec:
      containers:
      - name: the-project
        image: PROJECT/IMAGE
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
