theProject/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-project-service
spec:
  type: NodePort
  selector:
    app: the-project
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
